# decision-moment-graph

./: .env.example  .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  LOON.md  NOOL.md  OSS_IP_BOUNDARY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: index.html  package.json  vite.config.js
app/src/: main.js  styles.css
cli/: dmg_validate.py  resolve.py  swarm.py
community/dips/: DIP-001_OUTCOME.md  TEMPLATE.md
conformance/: CONFORMANCE.md  runner.py
conformance/fixtures/: merit_new_decision.dmg.json
course/: README.md
course/modules/: CAPSTONE.md  M0_START_HERE.md  M10_CALIBRATION_TRACK.md  M1_MEMO_KIT.md  M2_MOMENT_KIT.md  M3_RAMP_KIT.md  M4_DOORS_KIT.md  M5_DISSENT_KIT.md  M6_TRACE_KIT.md  M7_COMMIT_KIT.md  M8_OUTCOME_KIT.md  M9_INTEGRATION.md
dmg/cli/: dmg_validate.py  lifecycle.py  swarm.py
dmg/frame/: README.md  __init__.py  builder.py  templates.py  validator.py
dmg/mcp/: server.py
dmg/schema/: dmg-swarm-v0.1.schema.json
dmg/sdk/: __init__.py  agentic_adapter.py  audit_export.py  (+2 more)
docs/: ADR_MIGRATION.md  ADVANCED_PATTERNS.md  API_REFERENCE.md  INDEX.md  KITS.md  MANIFESTO.md  MODES.md  PRINCIPLES.md  PROCESSES.md  PROTOCOL.md  QUICKSTART.md  SPARKIT_AGENTIC_ARCHITECTURE.md  SPARKIT_VS_AGENTIC_REASONING.md  TAXONOMY.md
examples/: merit_valid_complete.dmg.json  onboarding_decision.dmg.json  ramp1_feature_flag.dmg.json  ramp3_roadmap_priority.dmg.json  ramp4_architecture.dmg.json  ramp5_acquisition.dmg.json  resolve_e2e.py  sparkit_resolve.py
mcp-apps/: README.md  decision-flow.js
papers/: LOON.md  NOOL.md
schema/: dmg-core-v0.1.schema.json
spec/: DMG_CORE_SPEC_v0.1.md  MERIT_VALIDATOR_SPEC.md  SECURITY.md  SPAR_DMG_ADAPTER_v0.1.md
src/: LOON.md  NOOL.md  gauge-emitter.js  replay.js
tests/: README.md  conftest.py
(+59 files in other folders)
