[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmg-open-standard"
version = "0.1.0"
description = "Decision Memory Graph - Open standard for traceable AI decisions with RESOLVE agentic loop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SYNTHAI Project"}
]
keywords = ["ai", "decisions", "agents", "memory", "governance", "resolve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy<2",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0.0",
]
http = [
    "requests>=2.28.0",
]
all = [
    "sentence-transformers>=2.0.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
dmg-resolve = "dmg.cli.resolve:main"
dmg-validate = "dmg.cli.dmg_validate:main"

[project.urls]
Homepage = "https://github.com/synthai/dmg-open-standard"
Documentation = "https://github.com/synthai/dmg-open-standard/tree/main/docs"
Repository = "https://github.com/synthai/dmg-open-standard"

[tool.setuptools.packages.find]
where = ["."]
include = ["dmg*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
